--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -3,6 +3,7 @@ name: Deploy to Netlify
 on:
   push:
     branches: [ "master" ]
+    paths: [ "src/**", "public/**" ]
   pull_request:
     branches: [ "master" ]
 
