--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -25,6 +25,7 @@ jobs:
         elm --help
     - name: Build
       run: |
+        npm ci
         npm run build
         mv public/_redirects dist/
     - name: Deploy to Netlify
