make ci file changes trigger action

--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -3,7 +3,7 @@ name: Deploy to Netlify
 on:
   push:
     branches: [ "master" ]
-    paths: [ "src/**", "public/**" ]
+    paths: [ "src/**", "public/**", ".github/workflows/netlify.yaml" ]
   pull_request:
     branches: [ "master" ]
 
