--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.9.3",
+    "@parcel/service-worker": "^2.9.3",
     "@parcel/transformer-elm": "^2.9.3",
     "@parcel/transformer-webmanifest": "^2.9.3",
     "elm": "^0.19.1-5",
