--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@parcel/packager-raw-url": "^2.9.3",
     "@parcel/service-worker": "^2.9.3",
     "@parcel/transformer-elm": "^2.9.3",
+    "@parcel/transformer-sass": "^2.9.3",
     "@parcel/transformer-webmanifest": "^2.9.3",
     "elm": "^0.19.1-5",
     "parcel": "^2.9.3"
